--- a/demoapp1/Views/pwademo/Home.cshtml
+++ b/demoapp1/Views/pwademo/Home.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_Layout1.cshtml";
 }
-
+<script>
+    localStorage.demo = '@Session["gwstokken"]';
+</script>
 <h2>Home</h2>
 
 @if (Model != null)
