--- a/demoapp1/Views/pwademo/MyFiles.cshtml
+++ b/demoapp1/Views/pwademo/MyFiles.cshtml
@@ -20,7 +20,7 @@
     <!-- CSS -->
     <link href="~/demoscript/compiled.min.css" rel="stylesheet" />
     <script src="~/js/JavaScript.js"></script>
-
+    <script src="~/js/JavaScript.js"></script>
   <script>
         $(document).ready(function ()
         {
@@ -112,42 +112,37 @@
 
                     <ul class="collapsible collapsible-accordion" id="nav-main">
 
-                        <li>
+                        <li >
                             <a class="collapsible-header waves-effect arrow-r">
-                            <i class="fa fa-chevron-right">
+                                <i class="fa fa-chevron-right">
                                 </i>
                                 ClassLink Drive
-                            <i class="fa fa-angle-down rotate-icon"></i>
+                                <i class="fa fa-angle-down rotate-icon"></i>
                             </a>
-                          
+
                             <div class="collapsible-body" id="child-clbody">
-          
+
                             </div>
                         </li>  <!---1. menu item--->
                         <li>
                             <a class="collapsible-header waves-effect arrow-r"><i class="fa fa-chevron-right"></i> Submit blog<i class="fa fa-angle-down rotate-icon"></i></a>
                             <div class="collapsible-body" id="newdemo">
-                              
+
                             </div>
                         </li>   <!--- demo1. menu item--->
 
 
 
                     </ul>
-                  
-             
-                <!--/. Side navigation links -->
-                <div class="sidenav-bg mask-strong"></div>
-            </li>
+
+
+                    <!--/. Side navigation links -->
+                    <div class="sidenav-bg mask-strong"></div>
+                </li>
                     
                     </ul>
-            <script>
-            $("#remove>ul").css({
-                "margin-left": "-15px",
-                "margin-right": "-7%",
-
-            });;
-            </script>
+        
+   
             <!--/. Sidebar navigation -->
             <!-- Navbar -->
             <nav class="navbar fixed-top navbar-toggleable-md navbar-dark scrolling-navbar double-nav">
@@ -186,10 +181,14 @@
         <!--/.Double navigation-->
         <!--Main layout-->
         <main>
-            <div class="container-fluid text-center" style="height: 800px;">
+        <div class="container-fluid text-center"style="height: 500px;">
                 <a class="btn btn-primary btn-lg">Primary button</a>
                 <a class="btn btn-secondary btn-lg">Secondary button</a>
                 <a class="btn btn-default btn-lg">Default button</a>
+                
+
+          
+
             </div>
         </main>
         <!--/Main layout-->
