--- a/demoapp1/Views/pwademo/TESTFILE.cshtml
+++ b/demoapp1/Views/pwademo/TESTFILE.cshtml
@@ -3,117 +3,296 @@
     Layout = null;
 }
 
-<!DOCTYPE html>
 
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <title>Test</title>
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <title>Close on click</title>
 
-    <style>
-        .no-padding{
-  padding:0px;
-}
-.glyphicon-icon-rpad .glyphicon,.glyphicon-icon-rpad .glyphicon.m8,.fa-icon-rpad .fa,.fa-icon-rpad .fa.m8{ padding-right:8px; }
-.glyphicon-icon-lpad .glyphicon,.glyphicon-icon-lpad .glyphicon.m8,.fa-icon-lpad .fa,.fa-icon-lpad .fa.m8{ padding-left:8px; }
-.glyphicon-icon-rpad .glyphicon.m5,.fa-icon-rpad .fa.m5{ padding-right:5px; }
-.glyphicon-icon-lpad .glyphicon.m5,.fa-icon-lpad .fa.m5{ padding-left:5px; }
-.glyphicon-icon-rpad .glyphicon.m12,.fa-icon-rpad .fa.m12{ padding-right:12px; }
-.glyphicon-icon-lpad .glyphicon.m12,.fa-icon-lpad .fa.m12{ padding-left:12px; }
-.glyphicon-icon-rpad .glyphicon.m15,.fa-icon-rpad .fa.m15{ padding-right:15px; }
-.glyphicon-icon-lpad .glyphicon.m15,.fa-icon-lpad .fa.m15{ padding-left:15px; }
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="~/BootSideMenu/css/BootSideMenu.css" rel="stylesheet" />
+    <!--[if lt IE 9]>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv-printshiv.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-
-
-ul.nav-menu-list-style .nav-header .menu-collapsible-icon{position:absolute; right:3px; top:16px; font-size:9px; }
-
-
-
-ul.nav-menu-list-style{
-  margin:0;
-}
-ul.nav-menu-list-style .nav-header{
-  border-top:1px solid #FFFFFF;
-  border-bottom:1px solid #e8e8e8;
-  display:block;
-  margin:0;
-  line-height:42px;
-  padding:0 8px;
-  font-weight:600;
-}
-ul.nav-menu-list-style> li{
-  position:relative; }
-ul.nav-menu-list-style> li a{
-  border-top:1px solid #FFFFFF;
-  border-bottom:1px solid #e8e8e8;
-  padding:0 10px;
-  line-height:32px;
-}
-ul.nav-menu-list-style> li:first-child a{
-}
-
-
-ul.nav-menu-list-style{list-style:none; padding:0px; margin:0px;}
-ul.nav-menu-list-style li .badge,ul.nav-menu-list-style li .pull-right,ul.nav-menu-list-style li span.badge,ul.nav-menu-list-style li label.badge{float:right; margin-top:7px;}
-ul.bullets{list-style:inside disc}
-ul.numerics{list-style:inside decimal}
-.ul.kas-icon-aero{}
-ul.kas-icon-aero li a:before{font-family: 'Glyphicons Halflings'; font-size:9px; content: "\e258"; padding-right:8px; }
-
-
+    <style type="text/css">
+        .user {
+            padding: 5px;
+            margin-bottom: 5px;
+            text-align: center;
+        }
     </style>
-
 </head>
 <body>
 
-    <div class="container">
-        <div class="row">
-            <h1>Bootstrap Tree Menu Example</h1>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="well no-padding">
-                    <div>
-                        <ul class="nav nav-list nav-menu-list-style">
-                            <li>
-                                <label class="tree-toggle nav-header glyphicon-icon-rpad">
-                                    <span class="glyphicon glyphicon-folder-close m5"></span>
-                                    Class Link
-                                    <span class="menu-collapsible-icon glyphicon glyphicon-chevron-down"></span>
-                                </label>
-                                <ul class="nav nav-list tree bullets" id="parent_class" style="display: block;">
 
-                                    <li> <label class="tree-toggle nav-header">Buttons </label> <ul class="nav nav-list tree bullets"><li><label class="tree-toggle nav-header">ButtonsColors</label><ul class="nav nav-list tree"><li><a href="#">Horizontal</a></li><li><a href="#">Vertical</a></li></ul></li></ul> </li>
-                                </ul>
-                            </li>
-                            <li class="divider"></li>
+    <div class="container">
 
-                        </ul>
-                    </div>
+        <!-- Static navbar -->
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">My Drive</a>
+                </div>
+                <div id="navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#"><span class="fa fa-home"></span> Home</a></li>
+                        <li><a href="#"><span class="fa fa-code"></span> Examples</a></li>
+                        <li><a href="#"><span class="fa fa-paypal"></span> Donation</a></li>
+                        <li><a href="#" target="_blank"><span class="fa fa-twitter"></span> Twitter</a></li>
+                        <li><a href="#" target="_blank"><span class="fa fa-github"></span> Github</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                More <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Github</a></li>
+                                <li><a href="#">Donation</a></li>
+                                <li><a href="#">My Site</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
+        </nav>
+
+        <div class="jumbotron">
+            <h1>BootSideMenu</h1>
+
+            <p>A jQuery plugin to easily create a sliding menu, working on a Bootstrap based application.</p>
+
+            <p>
+                <a class="btn btn-lg btn-warning" href="#" role="button">
+                    <span class="fa fa-paypal"></span> Thanks
+                </a>
+            </p>
+        </div>
+
+        <div class="row">
+            <div class="col-md-8">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <span class="fa fa-jsfiddle">
+                        </span> <!--How to-->
+                    </div>
+                    <!--<div class="panel-body">
+                                        <p class="lead">The menu will appear on the left.</p>
+                                    <pre>$(document).ready(function () {
+                        $('#test').BootSideMenu({
+                            side: "left",
+                            closeOnClick: false
+                        });
+                    });</pre>
+                                        <p class="lead">There are some interesting events you can use with your menu</p>
+                            <pre>onTogglerClick: function () {
+                        //code to be executed when the toggler arrow was clicked
+                    },
+                    onBeforeOpen: function () {
+                        //code to be executed before menu open
+                    },
+                    onBeforeClose: function () {
+                        //code to be executed before menu close
+                    },
+                    onOpen: function () {
+                        //code to be executed after menu open
+                    },
+                    onClose: function () {
+                        //code to be executed after menu close
+                    },
+                    onStartup: function () {
+                        //code to be executed when the plugin is called
+                    }</pre>
+                                        <p>See these in action in the <a href="6-events.html">next example</a>.</p>
+                                    </div>-->
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><span class="fa fa-paypal"></span> A courtesy coffee?</div>
+                    <!--<div class="panel-body">
+                        <p class="lead">If you appreciate my work, and you are kind to offer a coffee, I will be very satisfied.</p>
+
+                        <p class="text-center">
+                            <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DUNFGKA32BFGE" target="_blank"><img src="../img/paypal_coffee.png"
+                                                                                                                                              style="border: 0"></a></p>
+
+                        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="text-center">
+                            <input type="hidden" name="cmd" value="_s-xclick">
+                            <input type="hidden" name="hosted_button_id" value="DUNFGKA32BFGE">
+                            <input type="image" src="https://www.paypalobjects.com/en_US/IT/i/btn/btn_donateCC_LG.gif" border="0" name="submit"
+                                   alt="PayPal è il metodo rapido e sicuro per pagare e farsi pagare online.">
+                            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                    </div>-->
+                </div>
+            </div>
+
         </div>
     </div>
-    <script>
-        $('.tree-toggle').click(function () {
-            $(this).parent().children('ul.tree').toggle(200);
-        });
-        $(function () {
-            $('.tree-toggle').parent().children('ul.tree').toggle(200);
-        })
-        $(document).ready(function () {
-            var html = '<li> <label class="tree-toggle nav-header">Buttons </label> <ul class="nav nav-list tree bullets"><li><label class="tree-toggle nav-header">ButtonsColors</label><ul class="nav nav-list tree"><li><a href="#">Horizontal</a></li><li><a href="#">Vertical</a></li></ul></li></ul> </li> </ul> </li>';
-            $('#parent_class').append(html);
-        });
 
+    <!--Test -->
+    <!--<div id="test">
+        <div class="user">
+            <img src="../img/avatar.png" alt="Esempio" class="img-thumbnail"><br>
+            <a href="http://www.lombardoandrea.com" target="_blank" class="navbar-link">Andrea Lombardo</a>
+        </div>
+
+        <div class="list-group">
+
+            <a href="#item-1" class="list-group-item" data-toggle="collapse">Item 1</a>
+
+            <div class="list-group collapse" id="item-1">
+                <a href="#" class="list-group-item">Item 1 di 1</a>
+                <a href="#" class="list-group-item">Item 2 di 1</a>
+                <a href="#item-1-1" class="list-group-item" data-toggle="collapse">Item 3 di 1</a>
+
+                <div class="list-group collapse" id="item-1-1">
+                    <a href="#" class="list-group-item">Item 1 di 1.3</a>
+                    <a href="#" class="list-group-item">Item 2 di 1.3</a>
+                    <a href="#" class="list-group-item">Item 3 di 1.3</a>
+                </div>
+
+            </div>
+
+            <a href="#item-2" class="list-group-item" data-toggle="collapse">Item 2</a>
+
+            <div class="list-group collapse" id="item-2">
+                <a href="#" class="list-group-item">Item 1 di 2</a>
+                <a href="#" class="list-group-item">Item 2 di 2</a>
+                <a href="#" class="list-group-item">Item 3 di 2</a>
+            </div>
+
+            <a href="#item-3" class="list-group-item" data-toggle="collapse">Item 3</a>
+
+            <div class="list-group collapse" id="item-3">
+                <a href="#" class="list-group-item">Item 1 di 3</a>
+                <a href="#" class="list-group-item">Item 2 di 3</a>
+                <a href="#item-3-1" class="list-group-item" data-toggle="collapse">Item 3 di 3</a>
+
+                <div class="list-group collapse" id="item-3-1">
+                    <a href="#" class="list-group-item">Item 1 di 3.3</a>
+                    <a href="#" class="list-group-item">Item 2 di 3.3</a>
+                    <a href="#" class="list-group-item">Item 3 di 3.3</a>
+                </div>
+
+            </div>
+
+            <a href="#item-4" class="list-group-item" data-toggle="collapse">Item 4</a>
+
+            <div class="list-group collapse" id="item-4">
+                <a href="#" class="list-group-item">Item 1 di 4</a>
+                <a href="#" class="list-group-item">Item 2 di 4</a>
+                <a href="#" class="list-group-item">Item 3 di 4</a>
+            </div>
+
+        </div>
+
+    </div>-->
+    <!--/Test -->
+    <div id="test">
+        <div class="user">
+            
+            <img src="~/BootSideMenu/img/avatar.png" alt="Esempio" class="img-thumbnail"><br>
+            <a href="#" class="navbar-link"><b>My Drive</b></a>
+        </div>
+
+        <div class="list-group" id="parentappend">
+
+
+        </div>
+    </div>
+
+
+    @*<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>*@
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+
+    <script src="~/js/BootSideMenu.js"></script>
+    <script src="~/js/JavaScript.js"></script>
+    <script>
+            $('#parentappend').empty();
+            var append = '<a href="#classlink_parent_child" class="list-group-item" data-toggle="collapse" id="classlink_parent">Class Link</a> </div> <div class="list-group collapse" id="classlink_parent_child"> </div>';
+
+            $('#parentappend').append(append);
+         $(document).ready(function () {
+
+             var items;
+             //var append = '<li> <a class="collapsible-header waves-effect arrow-r"><i class="fa fa-chevron-right"></i>' + items + '<i class="fa fa-angle-down rotate-icon"></i></a>    </li> ';
+             $.ajax({
+
+                 url: 'https://betanodeapi.classlink.com/myfiles/services',
+                 type: 'GET',
+                 dataType: 'json',
+                 headers: {
+                     'gwstoken': localStorage.demo
+                 },
+                 contentType: 'application/x-www-form-urlencoded',
+
+
+                 success: function (result) {
+
+                     addElementToLi(result);
+                     parentfolders(localStorage.demo);
+                 },
+                 failure: function (response) {
+                     alert('failure');
+                 },
+                 error: function (error) {
+
+                     alert('error');
+                     return false;
+                     console.log('error', error);
+
+                 }
+             });
+
+
+
+             //CALL AJAX AS REQURIED
+
+
+       // var body = ' <a href="#classlink" class="list-group-item" data-toggle="collapse">Class Link</a> <div class="list-group collapse" id="classlink"> <a href="#" class="list-group-item">Item 1 di 1</a> <a href="#" class="list-group-item">Item 2 di 1</a></div>';
+
+      //  $('#parentappend').append(body);
+        event.stopPropagation();
+         });
+         $('#test-left').BootSideMenu({
+             side: "left",
+             onBeforeOpen: function () {
+                 alert('Menu will open soon');
+             },
+             onBeforeClose: function () {
+                 alert('Menu will close soon');
+             }
+         });
+
+
+
+    </script>
+
+
+    <script type="text/javascript">
+    $(document).ready(function () {
+        $('#test').BootSideMenu({
+            side: "left",
+            closeOnClick: false
+        });
+    });
     </script>
 </body>
 </html>
