--- a/demoapp1/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/demoapp1/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.ExternalLoginConfirmationViewModel
+﻿@model Classlink.Dashboard.Web.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
