--- a/demoapp1/Views/Account/Register.cshtml
+++ b/demoapp1/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.RegisterViewModel
+﻿@model Classlink.Dashboard.Web.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
