--- a/demoapp1/Views/Account/ResetPassword.cshtml
+++ b/demoapp1/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.ResetPasswordViewModel
+﻿@model Classlink.Dashboard.Web.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
