--- a/demoapp1/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/demoapp1/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.ExternalLoginListViewModel
+﻿@model Classlink.Dashboard.Web.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <center >
