--- a/demoapp1/Views/Account/ForgotPassword.cshtml
+++ b/demoapp1/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.ForgotPasswordViewModel
+﻿@model Classlink.Dashboard.Web.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
