--- a/demoapp1/Views/pwademo/Index.cshtml
+++ b/demoapp1/Views/pwademo/Index.cshtml
@@ -75,7 +75,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-5" })
                     <div class="col-md-4">
-                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Password", @id = "txtpwd" } })
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Password", @id = "txtpwd" ,@type="password"} })
                         @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                     </div>
                 </div>
