--- a/demoapp1/Views/Account/SendCode.cshtml
+++ b/demoapp1/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.SendCodeViewModel
+﻿@model Classlink.Dashboard.Web.Models.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
