--- a/demoapp1/Views/Manage/AddPhoneNumber.cshtml
+++ b/demoapp1/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.AddPhoneNumberViewModel
+﻿@model Classlink.Dashboard.Web.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
