--- a/demoapp1/Views/Manage/ChangePassword.cshtml
+++ b/demoapp1/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.ChangePasswordViewModel
+﻿@model Classlink.Dashboard.Web.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
