--- a/demoapp1/Views/Manage/SetPassword.cshtml
+++ b/demoapp1/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.SetPasswordViewModel
+﻿@model Classlink.Dashboard.Web.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
