--- a/demoapp1/Views/Account/VerifyCode.cshtml
+++ b/demoapp1/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.VerifyCodeViewModel
+﻿@model Classlink.Dashboard.Web.Models.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
