--- a/demoapp1/Views/Manage/ManageLogins.cshtml
+++ b/demoapp1/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.ManageLoginsViewModel
+﻿@model Classlink.Dashboard.Web.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
