--- a/demoapp1/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/demoapp1/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model demoapp1.Models.VerifyPhoneNumberViewModel
+﻿@model Classlink.Dashboard.Web.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
