--- a/Classlink.web/Views/Classlink/Home.cshtml
+++ b/Classlink.web/Views/Classlink/Home.cshtml
@@ -15,6 +15,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Dashboard - Registration Setup</title>
+    <!--[if lte IE 9]>
+    <script src="xdomain.js" slave="http://example.org/proxy.html"></script>
+    <![endif]-->
+
     <!--Different Browser icon for All Devices -->
     <link href="favicon.ico?v=0.025920" rel="icon" type="image/x-icon">
     <!--IE Browser icon for All Devices -->
