--- a/Classlink.web/Views/Classlink/Home.cshtml
+++ b/Classlink.web/Views/Classlink/Home.cshtml
@@ -44,15 +44,17 @@
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
     <!--Wrapper Scope -->
-    <div class="wrapper wrapper-scope welcome-wrapper">
-        <div class="welcome-wrapper-body">
-            <div class="img-box" ><img style="border-radius: 17%;" src="http://dlkf6mjgds3hc.cloudfront.net/clouddrive/2017/06/15/t1497541378-9f9a00d397946be66ed2579649b825ca/1497541378.png" alt="" /></div>
-            <p>Welcome to your</p>
-            <h1>Notebook Library</h1>
-            <p>Navigate the folders to find a page from your notebook or search for pages below</p>
-            <button class="btn btn-primary bg-white" tabindex="6" onClick="window.location = '../Classlink/Myfiles';">View MyFiles</button>
-            @*<input type="submit" class="btn btn-primary bg-white" tabindex="6" value="View MyFiles" />*@
-        </div>
+    <div class="wrapper wrapper-scope welcome-wrapper row">
+        <center>
+            <div class="welcome-wrapper-body">
+                <div class="img-box img-responsive"><img style="border-radius: 17%;" src="http://dlkf6mjgds3hc.cloudfront.net/clouddrive/2017/06/15/t1497541378-9f9a00d397946be66ed2579649b825ca/1497541378.png" alt="" /></div>
+                <p>Welcome to your</p>
+                <h1>Notebook Library</h1>
+                <p>Navigate the folders to find a page from your notebook or search for pages below</p>
+                <button class="btn btn-primary bg-white" tabindex="6" onClick="window.location = '../Classlink/Myfiles';">View MyFiles</button>
+                @*<input type="submit" class="btn btn-primary bg-white" tabindex="6" value="View MyFiles" />*@
+            </div>
+        </center>
     </div>
     <!--Ends Wrapper Scope -->
     <script type="text/javascript" src="~/javascripts/jquery.min.js?v=0.1"></script>
