--- a/Classlink.web/Views/Classlink/Index.cshtml
+++ b/Classlink.web/Views/Classlink/Index.cshtml
@@ -140,12 +140,16 @@
     
 
     <!--Ends Wrapper Scope -->
+    <script src="~/WinJS/js/base.min.js"></script>
+    
+    <script src="~/WinJS/js/ui.js"></script>
     <script type="text/javascript" src="~/javascripts/jquery.min.js?v=0.1"></script>
     <script type="text/javascript" src="~/javascripts/jquery-migrate.min.js?v=0.1"></script>
     <script type="text/javascript" src="~/javascripts/bootstrap.min.js?v=0.1"></script>
     <script type="text/javascript" src="~/javascripts/custom.js?v=0.1"></script>
     <script type="text/javascript">
-    $(window).load(function() {
+        $(window).load(function () {
+           
         $(".loader").fadeOut("slow");
     });
     </script>
